// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Base - onMouseEnter & onMouseLeave 1`] = `
<span
  className="iogart-ui iogart-base iogart-tag-base"
  onClick={[Function]}
  onDoubleClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  TagBase
</span>
`;

exports[`Tag Base - onMouseEnter & onMouseLeave 2`] = `
<span
  className="iogart-ui iogart-base iogart-tag-base iogart--hover"
  onClick={[Function]}
  onDoubleClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  TagBase
</span>
`;

exports[`Tag Base - onMouseEnter & onMouseLeave 3`] = `
<span
  className="iogart-ui iogart-base iogart-tag-base"
  onClick={[Function]}
  onDoubleClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  TagBase
</span>
`;
